# pedal-board

./: Cargo.toml  README.md
examples/: main.rs
examples/alsa_io/: alsa_device.rs  guitar.json  main.rs  vocals.json
src/: lib.rs  pedals.rs  utils.rs
src/dsp/: power_meter.rs
src/faust/: guitar_synth_v1.dsp
src/pedals/: bass_envelope.rs  pedal_board.rs  room_simulator.rs
