[package]
name = "pedal-board"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0.78"

[dev-dependencies]
alsa = "0.9.1"
clap = { version = "4.5.17", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.5"
